# learn-rust

./: Cargo.toml  configuration.yaml
ch01-num-guess/: Cargo.toml
ch01-num-guess/src/: main.rs
ch03-nth-fibo/: Cargo.toml
ch03-nth-fibo/src/: main.rs
ch04-ownership/src/: main.rs
ch05-structs/src/: main.rs
ch06-enums/: Cargo.toml
ch06-enums/src/: main.rs
ch08-collections/: Cargo.toml
ch08-collections/src/: main.rs
ch09-errors/: Cargo.toml
ch09-errors/src/: main.rs
ch10-generics/: Cargo.toml
ch10-generics/src/: main.rs
ch11-testing/: Cargo.toml
ch11-testing/src/: lib.rs
ch11-testing/src/tests/: mod.rs  test_adder.rs
ch11-testing/tests/: test_adder.rs
ch12-cli-tool-project/: Cargo.toml
ch12-cli-tool-project/src/: args.rs  lib.rs  main.rs
ch13-fp/: Cargo.toml
ch13-fp/src/: closures.rs  lib.rs  main.rs
ch15-smart-pointers/src/: exps.rs  lib.rs  mybox.rs
ch16-concurrency/: Cargo.toml
ch16-concurrency/src/: lib.rs  main.rs
ch20-webserver/: Cargo.toml
ch20-webserver/src/: lib.rs  main.rs  tmpl.rs  workers.rs
docker/postgres/: docker-compose.yaml
scripts/: env.sh
src/: lib.rs  main.rs
src/utils/: greet.rs
zero2prod/: .env  Cargo.toml  configuration.yaml
zero2prod/.sqlx/: query-a3116c72614334c57d6cde61ed0b0ab1c9965eb5622ab80dd7b43978059e0a83.json
zero2prod/docker/: Dockerfile
zero2prod/scripts/: docker-build.sh  docker-run.sh
zero2prod/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
zero2prod/src/routes/: health_check.rs  subscription.rs
zero2prod/tests/: health_check.rs  subscribe.rs  subscription.rs
