[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"


[workspace]

resolver = "2"
members = [
  "ch01-num-guess",
  "ch03-nth-fibo",
  "ch04-ownership",
  "ch05-structs",
  "ch06-enums",
  "ch08-collections",
  "ch09-errors",
  "ch10-generics",
  "ch11-testing",
  "ch12-cli-tool-project",
  "ch13-fp",
  "ch15-smart-pointers",
  "ch16-concurrency",
  "ch20-webserver",
]