[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
exclude = ["./scripts", "./docker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
clap = { version = "4.4.8", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.1"
reqwest = "0.11.22"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio-rustls", "time"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
uid = "0.1.7"
utc = "0.2.0"
uuid = { version = "1.5.0", features = ["v4"] }

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[lib]

path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
